--- a/03. Errors.ipynb
+++ b/03. Errors.ipynb
@@ -123,11 +123,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# need to import the factorial and exponential functions from the math module\n",
+    "import math\n",
     "from math import factorial, exp\n",
     "def my_exponential(x,n):\n",
     "    '''x is the exponent and n is the number of terms'''\n",
@@ -139,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -183,6 +184,113 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 100.0 %\n",
+      "1 66.66666666666666 %\n",
+      "2 40.0 %\n",
+      "3 21.052631578947363 %\n",
+      "4 9.523809523809527 %\n",
+      "5 3.669724770642201 %\n",
+      "6 1.2084592145015065 %\n",
+      "7 0.34408602150537515 %\n",
+      "8 0.08594757198109124 %\n",
+      "9 0.019095813242941077 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "from math import factorial, exp\n",
+    "oldval = 0.0\n",
+    "x = 2.0\n",
+    "nterms = 10\n",
+    "for n in range(0,nterms):\n",
+    "    newval = oldval + x**n/ factorial(n)\n",
+    "    ϵa = abs( (newval - oldval)/newval) * 100\n",
+    "    oldval = newval\n",
+    "    print(n, ϵa,'%')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 100.0 %\n",
+      "2 66.66666666666666 %\n",
+      "3 40.0 %\n",
+      "4 21.052631578947363 %\n",
+      "5 9.523809523809527 %\n",
+      "6 3.669724770642201 %\n",
+      "7 1.2084592145015065 %\n",
+      "8 0.34408602150537515 %\n",
+      "9 0.08594757198109124 %\n",
+      "10 0.019095813242941077 %\n",
+      "11 0.0038190167941204627 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "from math import factorial, exp\n",
+    "oldval = 0.0\n",
+    "x = 2.0\n",
+    "nterms = 100\n",
+    "tol = 0.01 # percent\n",
+    "ϵa = 10000\n",
+    "n = 0\n",
+    "while ϵa > tol:\n",
+    "    newval = oldval + x**n/ factorial(n)\n",
+    "    ϵa = abs( (newval - oldval)/newval) * 100\n",
+    "    oldval = newval\n",
+    "    n = n + 1\n",
+    "    print(n, ϵa,'%')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mycos(x, nterms):\n",
+    "    result = 0.0\n",
+    "    for n in range(0,nterms):\n",
+    "        result += (-1)**n * x**(2*n) / factorial(2*n)\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'math' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-59e231322ede>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmycos\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcos\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'math' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "print(mycos(3, 5), math.cos(3))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -190,8 +298,9 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -205,7 +314,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
