--- a/topics/regression/Least Squares Regression.ipynb
+++ b/topics/regression/Least Squares Regression.ipynb
@@ -5180,7 +5180,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -5194,7 +5194,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   },
   "toc": {
    "base_numbering": 1,
