update style and notebooks.

--- a/topics/regression/Normal Equations Example - GPA.ipynb
+++ b/topics/regression/Normal Equations Example - GPA.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Least-Squares Regression Notebook <br/> Using the Normal Equations <br/> CH EN 2450\n",
+    "# Least-Squares Regression Notebook <br/> Using the Normal Equations \n",
+    "## CH EN 2450 - Numerical Methods\n",
     "**Prof. Tony Saad (<a>www.tsaad.net</a>) <br/>Department of Chemical Engineering <br/>University of Utah**"
    ]
   },
@@ -1267,16 +1268,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "variables": {
-     "x_1": "<p><strong>NameError</strong>: name &#39;x_1&#39; is not defined</p>\n",
-     "x_2": "<p><strong>NameError</strong>: name &#39;x_2&#39; is not defined</p>\n",
-     "x_n": "<p><strong>NameError</strong>: name &#39;x_n&#39; is not defined</p>\n",
-     "y_1": "<p><strong>NameError</strong>: name &#39;y_1&#39; is not defined</p>\n",
-     "y_2": "<p><strong>NameError</strong>: name &#39;y_2&#39; is not defined</p>\n",
-     "y_n": "<p><strong>NameError</strong>: name &#39;y_n&#39; is not defined</p>\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "## Straight Line Fit\n",
     " For a straight line model, we have\n",
@@ -1286,18 +1278,18 @@
     "For this model, the normal equations are given by the system\n",
     "\\begin{equation}\n",
     "\\left[ {\\begin{array}{*{20}{c}}\n",
-    "1&{{x_1}}\\\\\n",
-    "1&{{x_2}}\\\\\n",
+    "1& x_1\\\\\n",
+    "1& x_2 \\\\\n",
     " \\vdots & \\vdots \\\\\n",
-    "1&{{x_n}}\n",
+    "1& x_n\n",
     "\\end{array}} \\right]\\left( \\begin{array}{l}\n",
-    "{a_0}\\\\\n",
-    "{a_1}\n",
+    "a_0\\\\\n",
+    "a_1\n",
     "\\end{array} \\right) = \\left( {\\begin{array}{*{20}{c}}\n",
-    "{{y_1}}\\\\\n",
-    "{{y_2}}\\\\\n",
+    "y_1\\\\\n",
+    "y_2\\\\\n",
     " \\vdots \\\\\n",
-    "{{y_n}}\n",
+    "y_n\n",
     "\\end{array}} \\right)\n",
     "\\end{equation}\n",
     "To solve this system in the least-squares sense, we have to solve the following system\n",
@@ -2716,15 +2708,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "variables": {
-     "x_1": "<p><strong>NameError</strong>: name &#39;x_1&#39; is not defined</p>\n",
-     "x_2": "<p><strong>NameError</strong>: name &#39;x_2&#39; is not defined</p>\n",
-     "y_1": "<p><strong>NameError</strong>: name &#39;y_1&#39; is not defined</p>\n",
-     "y_2": "<p><strong>NameError</strong>: name &#39;y_2&#39; is not defined</p>\n",
-     "y_n": "<p><strong>NameError</strong>: name &#39;y_n&#39; is not defined</p>\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "## Quadratic Fit\n",
     " For a quadratic model, we have\n",
@@ -2734,19 +2718,19 @@
     "For this model, the normal equations are given by the system\n",
     "\\begin{equation}\n",
     "\\left[ {\\begin{array}{*{20}{c}}\n",
-    "1&{{x_1}} & {x_1^2}\\\\\n",
-    "1&{{x_2}} & {x_2^2}\\\\\n",
+    "1&x_1 & x_1^2\\\\\n",
+    "1&x_2 & x_2^2\\\\\n",
     " \\vdots & \\vdots & \\vdots\\\\\n",
-    "1&{x_n} & x_n^2\n",
+    "1 & x_n & x_n^2\n",
     "\\end{array}} \\right]\\left( \\begin{array}{l}\n",
     "{a_0}\\\\\n",
     "{a_1} \\\\\n",
     "a_2\n",
     "\\end{array} \\right) = \\left( {\\begin{array}{*{20}{c}}\n",
-    "{{y_1}}\\\\\n",
-    "{{y_2}}\\\\\n",
+    "y_1\\\\\n",
+    "y_2\\\\\n",
     " \\vdots \\\\\n",
-    "{{y_n}}\n",
+    "y_n\n",
     "\\end{array}} \\right)\n",
     "\\end{equation}\n",
     "To solve this system in the least-squares sense, we have to solve the following system\n",
@@ -4782,6 +4766,139 @@
     "x = np.linspace(2,4)\n",
     "plt.plot(x,p(x))\n",
     "print(rsquared(xi,yi,p))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "CSS style adapted from https://github.com/barbagroup/CFDPython. Copyright (c) Barba group\n",
+       "<link href='http://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet' type='text/css'>\n",
+       "<link href='http://fonts.googleapis.com/css?family=Bitter' rel='stylesheet' type='text/css'>\n",
+       "<link href='http://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>\n",
+       "<link href='http://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>\n",
+       "<link href='http://fonts.googleapis.com/css?family=Fenix' rel='stylesheet' type='text/css'>\n",
+       "<link href='http://fonts.googleapis.com/css?family=Alegreya+Sans:100,300,400,500,700,800,900,100italic,300italic,400italic,500italic,700italic,800italic,900italic' rel='stylesheet' type='text/css'>\n",
+       "<link href='http://fonts.googleapis.com/css?family=Source+Code+Pro:300,400' rel='stylesheet' type='text/css'>\n",
+       "\n",
+       "<style>\n",
+       "    @font-face {\n",
+       "        font-family: \"Computer Modern\";\n",
+       "        src: url('http://mirrors.ctan.org/fonts/cm-unicode/fonts/otf/cmunss.otf');\n",
+       "    }\n",
+       "\n",
+       "    /*div.cell{\n",
+       "        width:800px;\n",
+       "        margin-left:16% !important;\n",
+       "        margin-right:auto;\n",
+       "    } */\n",
+       "\n",
+       "    /* set the font size in tables */\n",
+       "    tr, td, th{\n",
+       "        font-size:110%;\n",
+       "    }\n",
+       "\n",
+       "    /* spec for headers */\n",
+       "    h1 {\n",
+       "        font-family: 'Bitter', serif;\n",
+       "    }\n",
+       "\n",
+       "    h2 {\n",
+       "        font-family: 'Fenix', serif;\n",
+       "    }\n",
+       "    \n",
+       "    h3{\n",
+       "        font-family: 'Fenix', serif;\n",
+       "        margin-top:12px;\n",
+       "        margin-bottom: 3px;\n",
+       "    }\n",
+       "\n",
+       "    h4{\n",
+       "        font-family: 'Fenix', serif;\n",
+       "    }\n",
+       "\n",
+       "    h5 {\n",
+       "        font-family: 'Alegreya Sans', sans-serif;\n",
+       "    }\n",
+       "\n",
+       "    div.text_cell_render{\n",
+       "        font-family: 'Merriweather','Alegreya Sans','Lora', 'Oxygen', \"Helvetica Neue\", Arial, Helvetica, Geneva, sans-serif;\n",
+       "        line-height: 160%;\n",
+       "        font-size: 130%;\n",
+       "    }\n",
+       "\n",
+       "    .CodeMirror{\n",
+       "        font-family: \"Source Code Pro\";\n",
+       "        font-size: 100%;\n",
+       "    }\n",
+       "\n",
+       "    .text_cell_render h1 {\n",
+       "        font-weight: 200;\n",
+       "        font-size: 32pt;\n",
+       "        line-height: 100%;\n",
+       "        color:#CD2305;\n",
+       "        margin-bottom: 0.5em;\n",
+       "        margin-top: 0.5em;\n",
+       "        display: block;\n",
+       "    }\n",
+       "\n",
+       "    .text_cell_render h5 {\n",
+       "        font-weight: 300;\n",
+       "        font-size: 16pt;\n",
+       "        color: #CD2305;\n",
+       "        font-style: italic;\n",
+       "        margin-bottom: .5em;\n",
+       "        margin-top: 0.5em;\n",
+       "        display: block;\n",
+       "    }\n",
+       "    \n",
+       "    .warning{\n",
+       "        color: rgb( 240, 20, 20 )\n",
+       "    }  \n",
+       "\n",
+       "/*  div#notebook {background-color: #1e1e1e; border-top: none;}\n",
+       "    div#notebook-container {background-color: rgb(180, 180, 180);}\n",
+       " */\n",
+       "\n",
+       "</style>\n",
+       "\n",
+       "<script>\n",
+       "    MathJax.Hub.Config({\n",
+       "                TeX: {\n",
+       "                    extensions: [\"AMSmath.js\"]\n",
+       "                },\n",
+       "                tex2jax: {\n",
+       "                    inlineMath: [ ['$','$'], [\"\\\\(\",\"\\\\)\"] ],\n",
+       "                    displayMath: [ ['$$','$$'], [\"\\\\[\",\"\\\\]\"] ]\n",
+       "                },\n",
+       "                displayAlign: 'center', // Change this to 'center' to center equations.\n",
+       "                \"HTML-CSS\": {\n",
+       "                    availableFonts: [\"TeX\"],\n",
+       "                    scale: 100,\n",
+       "                    styles: {'.MathJax_Display': {\"margin\": 4}}\n",
+       "                }\n",
+       "        });\n",
+       "</script>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from IPython.core.display import HTML\n",
+    "def css_styling():\n",
+    "    styles = open(\"../../styles/custom.css\", \"r\").read()\n",
+    "    return HTML(styles)\n",
+    "css_styling()"
    ]
   },
   {
