--- a/topics/regression/Least Squares Regression.ipynb
+++ b/topics/regression/Least Squares Regression.ipynb
@@ -5389,7 +5389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 1,
    "metadata": {
     "nbpresent": {
      "id": "17b00c90-ab55-4e22-a85f-2f09e710ca04"
@@ -5462,7 +5462,7 @@
        "    .text_cell_render h1 {\n",
        "        font-weight: 200;\n",
        "        font-size: 32pt;\n",
-       "        line-height: 100%;\n",
+       "        line-height: 120%;\n",
        "        color:#CD2305;\n",
        "        margin-bottom: 0.5em;\n",
        "        margin-top: 0.5em;\n",
@@ -5515,7 +5515,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5539,7 +5539,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -5553,7 +5553,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   },
   "toc": {
    "base_numbering": 1,
