--- a/topics/numerical-integration/numerical integration.ipynb
+++ b/topics/numerical-integration/numerical integration.ipynb
@@ -6607,7 +6607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "metadata": {
     "nbpresent": {
      "id": "17b00c90-ab55-4e22-a85f-2f09e710ca04"
@@ -6742,7 +6742,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6766,7 +6766,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -6780,7 +6780,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
