--- a/topics/initial-value-problems/Lobster Example - with gaps.ipynb
+++ b/topics/initial-value-problems/Lobster Example - with gaps.ipynb
@@ -1508,7 +1508,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1522,7 +1522,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.6"
   },
   "toc": {
    "colors": {
