various updates plus add bvp example

--- a/topics/initial-value-problems/System of Equations Example - SIR Epidemic Model - With Gaps.ipynb
+++ b/topics/initial-value-problems/System of Equations Example - SIR Epidemic Model - With Gaps.ipynb
@@ -18,14 +18,9 @@
    "source": [
     "import numpy as np\n",
     "from numpy import *\n",
-    "# %matplotlib notebook\n",
-    "# %matplotlib nbagg\n",
     "%matplotlib inline\n",
     "%config InlineBackend.figure_format = 'svg'\n",
-    "\n",
-    "# %matplotlib qt\n",
     "import matplotlib.pyplot as plt\n",
-    "from scipy.optimize import fsolve\n",
     "from scipy.integrate import odeint"
    ]
   },
@@ -54,43 +49,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def rhs_sir(SIR, t, N, beta, gamma):\n",
-    "    S, I, R = SIR #SIR is a vector of solutions\n",
-    "    dSdt = ?\n",
-    "    dIdt = ?\n",
-    "    dRdt = ?\n",
-    "    return ?, ?, ?"
+    "def rhs_sir(PHI, t, ?):\n",
+    "    # PHI is the vector of dependent variables containing the 3 dependent vars: PHI=[S,I,R]\n",
+    "    S = ?\n",
+    "    I = ?\n",
+    "    R = ?\n",
+    "    dSdt = -beta/N * S * I\n",
+    "    dIdt = beta/N * S * I - gamma * I\n",
+    "    dRdt = gamma * I\n",
+    "    # you must return the RHS in a consistent order with PHI - rhs0 corresponds to phi0, etc...\n",
+    "    return [?, ?, ?]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "N = 3e3 # total population\n",
+    "N  = 3e3 # total population\n",
     "I0 = 10 # 10 sick individuals\n",
     "R0 = 0 # 0 people recovered\n",
     "S0 = N - I0 # we need to conserve the total population\n",
-    "β = 0.6\n",
-    "γ = 1/20.0\n",
-    "\n",
+    "β  = 0.6\n",
+    "γ  = 1/20.0\n",
     "tend = 100 # days\n",
-    "t = np.linspace(0,tend,tend)\n",
+    "\n",
+    "t = np.linspace(0,tend,int(tend))\n",
     "# Initial conditions vector\n",
-    "y0 = S0, I0, R0\n",
-    "# Integrate the SIR equations over the time grid, t.\n",
-    "sol = odeint(?, y0, t, args=(N, β, γ))\n",
-    "S, I, R = sol.T"
+    "y0 = [S0, I0, R0]\n",
+    "sol = odeint(?, y0, t, args=(?))\n",
+    "S = ?\n",
+    "I = ?\n",
+    "R = ?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
        "   <g id=\"matplotlib.axis_1\">\n",
        "    <g id=\"xtick_1\">\n",
        "     <g id=\"line2d_1\">\n",
-       "      <path clip-path=\"url(#p45db448fe5)\" d=\"M 43.78125 239.758125 \n",
+       "      <path clip-path=\"url(#p6dd6b70650)\" d=\"M 43.78125 239.758125 \n",
        "L 43.78125 22.318125 \n",
        "\" style=\"fill:none;stroke:#b0b0b0;stroke-linecap:square;stroke-width:0.8;\"/>\n",
        "     </g>\n",
@@ -135,10 +135,10 @@
        "      <defs>\n",
        "       <path d=\"M 0 0 \n",
        "L 0 3.5 \n",
-       "\" id=\"maa63bee120\" style=\"stroke:#000000;stroke-width:0.8;\"/>\n",
+       "\" id=\"m702c7d857e\" style=\"stroke:#000000;stroke-width:0.8;\"/>\n",
        "      </defs>\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"43.78125\" xlink:href=\"#maa63bee120\" y=\"239.758125\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"43.78125\" xlink:href=\"#m702c7d857e\" y=\"239.758125\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_1\">\n",
@@ -173,13 +173,13 @@
        "    </g>\n",
        "    <g id=\"xtick_2\">\n",
        "     <g id=\"line2d_3\">\n",
-       "      <path clip-path=\"url(#p45db448fe5)\" d=\"M 110.74125 239.758125 \n",
+       "      <path clip-path=\"url(#p6dd6b70650)\" d=\"M 110.74125 239.758125 \n",
        "L 110.74125 22.318125 \n",
        "\" style=\"fill:none;stroke:#b0b0b0;stroke-linecap:square;stroke-width:0.8;\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_4\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"110.74125\" xlink:href=\"#maa63bee120\" y=\"239.758125\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"110.74125\" xlink:href=\"#m702c7d857e\" y=\"239.758125\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_2\">\n",
@@ -218,13 +218,13 @@
        "    </g>\n",
        "    <g id=\"xtick_3\">\n",
        "     <g id=\"line2d_5\">\n",
-       "      <path clip-path=\"url(#p45db448fe5)\" d=\"M 177.70125 239.758125 \n",
+       "      <path clip-path=\"url(#p6dd6b70650)\" d=\"M 177.70125 239.758125 \n",
        "L 177.70125 22.318125 \n",
        "\" style=\"fill:none;stroke:#b0b0b0;stroke-linecap:square;stroke-width:0.8;\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_6\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"177.70125\" xlink:href=\"#maa63bee120\" y=\"239.758125\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"177.70125\" xlink:href=\"#m702c7d857e\" y=\"239.758125\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_3\">\n",
@@ -256,13 +256,13 @@
        "    </g>\n",
        "    <g id=\"xtick_4\">\n",
        "     <g id=\"line2d_7\">\n",
-       "      <path clip-path=\"url(#p45db448fe5)\" d=\"M 244.66125 239.758125 \n",
+       "      <path clip-path=\"url(#p6dd6b70650)\" d=\"M 244.66125 239.758125 \n",
        "L 244.66125 22.318125 \n",
        "\" style=\"fill:none;stroke:#b0b0b0;stroke-linecap:square;stroke-width:0.8;\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_8\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"244.66125\" xlink:href=\"#maa63bee120\" y=\"239.758125\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"244.66125\" xlink:href=\"#m702c7d857e\" y=\"239.758125\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_4\">\n",
@@ -307,13 +307,13 @@
        "    </g>\n",
        "    <g id=\"xtick_5\">\n",
        "     <g id=\"line2d_9\">\n",
-       "      <path clip-path=\"url(#p45db448fe5)\" d=\"M 311.62125 239.758125 \n",
+       "      <path clip-path=\"url(#p6dd6b70650)\" d=\"M 311.62125 239.758125 \n",
        "L 311.62125 22.318125 \n",
        "\" style=\"fill:none;stroke:#b0b0b0;stroke-linecap:square;stroke-width:0.8;\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_10\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"311.62125\" xlink:href=\"#maa63bee120\" y=\"239.758125\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"311.62125\" xlink:href=\"#m702c7d857e\" y=\"239.758125\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_5\">\n",
@@ -367,13 +367,13 @@
        "    </g>\n",
        "    <g id=\"xtick_6\">\n",
        "     <g id=\"line2d_11\">\n",
-       "      <path clip-path=\"url(#p45db448fe5)\" d=\"M 378.58125 239.758125 \n",
+       "      <path clip-path=\"url(#p6dd6b70650)\" d=\"M 378.58125 239.758125 \n",
        "L 378.58125 22.318125 \n",
        "\" style=\"fill:none;stroke:#b0b0b0;stroke-linecap:square;stroke-width:0.8;\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_12\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"378.58125\" xlink:href=\"#maa63bee120\" y=\"239.758125\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"378.58125\" xlink:href=\"#m702c7d857e\" y=\"239.758125\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_6\">\n",
@@ -558,7 +558,7 @@
        "   <g id=\"matplotlib.axis_2\">\n",
        "    <g id=\"ytick_1\">\n",
        "     <g id=\"line2d_13\">\n",
-       "      <path clip-path=\"url(#p45db448fe5)\" d=\"M 43.78125 239.758125 \n",
+       "      <path clip-path=\"url(#p6dd6b70650)\" d=\"M 43.78125 239.758125 \n",
        "L 378.58125 239.758125 \n",
        "\" style=\"fill:none;stroke:#b0b0b0;stroke-linecap:square;stroke-width:0.8;\"/>\n",
        "     </g>\n",
@@ -566,10 +566,10 @@
        "      <defs>\n",
        "       <path d=\"M 0 0 \n",
        "L -3.5 0 \n",
-       "\" id=\"m1a5030e564\" style=\"stroke:#000000;stroke-width:0.8;\"/>\n",
+       "\" id=\"m04299437f9\" style=\"stroke:#000000;stroke-width:0.8;\"/>\n",
        "      </defs>\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"43.78125\" xlink:href=\"#m1a5030e564\" y=\"239.758125\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"43.78125\" xlink:href=\"#m04299437f9\" y=\"239.758125\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_8\">\n",
@@ -591,13 +591,13 @@
        "    </g>\n",
        "    <g id=\"ytick_2\">\n",
        "     <g id=\"line2d_15\">\n",
-       "      <path clip-path=\"url(#p45db448fe5)\" d=\"M 43.78125 200.22358 \n",
+       "      <path clip-path=\"url(#p6dd6b70650)\" d=\"M 43.78125 200.22358 \n",
        "L 378.58125 200.22358 \n",
        "\" style=\"fill:none;stroke:#b0b0b0;stroke-linecap:square;stroke-width:0.8;\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_16\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"43.78125\" xlink:href=\"#m1a5030e564\" y=\"200.22358\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"43.78125\" xlink:href=\"#m04299437f9\" y=\"200.22358\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_9\">\n",
@@ -611,13 +611,13 @@
        "    </g>\n",
        "    <g id=\"ytick_3\">\n",
        "     <g id=\"line2d_17\">\n",
-       "      <path clip-path=\"url(#p45db448fe5)\" d=\"M 43.78125 160.689034 \n",
+       "      <path clip-path=\"url(#p6dd6b70650)\" d=\"M 43.78125 160.689034 \n",
        "L 378.58125 160.689034 \n",
        "\" style=\"fill:none;stroke:#b0b0b0;stroke-linecap:square;stroke-width:0.8;\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_18\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"43.78125\" xlink:href=\"#m1a5030e564\" y=\"160.689034\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"43.78125\" xlink:href=\"#m04299437f9\" y=\"160.689034\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_10\">\n",
@@ -631,13 +631,13 @@
        "    </g>\n",
        "    <g id=\"ytick_4\">\n",
        "     <g id=\"line2d_19\">\n",
-       "      <path clip-path=\"url(#p45db448fe5)\" d=\"M 43.78125 121.154489 \n",
+       "      <path clip-path=\"url(#p6dd6b70650)\" d=\"M 43.78125 121.154489 \n",
        "L 378.58125 121.154489 \n",
        "\" style=\"fill:none;stroke:#b0b0b0;stroke-linecap:square;stroke-width:0.8;\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_20\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"43.78125\" xlink:href=\"#m1a5030e564\" y=\"121.154489\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"43.78125\" xlink:href=\"#m04299437f9\" y=\"121.154489\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_11\">\n",
@@ -651,13 +651,13 @@
        "    </g>\n",
        "    <g id=\"ytick_5\">\n",
        "     <g id=\"line2d_21\">\n",
-       "      <path clip-path=\"url(#p45db448fe5)\" d=\"M 43.78125 81.619943 \n",
+       "      <path clip-path=\"url(#p6dd6b70650)\" d=\"M 43.78125 81.619943 \n",
        "L 378.58125 81.619943 \n",
        "\" style=\"fill:none;stroke:#b0b0b0;stroke-linecap:square;stroke-width:0.8;\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_22\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"43.78125\" xlink:href=\"#m1a5030e564\" y=\"81.619943\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"43.78125\" xlink:href=\"#m04299437f9\" y=\"81.619943\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_12\">\n",
@@ -671,13 +671,13 @@
        "    </g>\n",
        "    <g id=\"ytick_6\">\n",
        "     <g id=\"line2d_23\">\n",
-       "      <path clip-path=\"url(#p45db448fe5)\" d=\"M 43.78125 42.085398 \n",
+       "      <path clip-path=\"url(#p6dd6b70650)\" d=\"M 43.78125 42.085398 \n",
        "L 378.58125 42.085398 \n",
        "\" style=\"fill:none;stroke:#b0b0b0;stroke-linecap:square;stroke-width:0.8;\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_24\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"43.78125\" xlink:href=\"#m1a5030e564\" y=\"42.085398\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"43.78125\" xlink:href=\"#m04299437f9\" y=\"42.085398\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_13\">\n",
@@ -932,7 +932,7 @@
        "    </g>\n",
        "   </g>\n",
        "   <g id=\"line2d_25\">\n",
-       "    <path clip-path=\"url(#p45db448fe5)\" d=\"M 43.78125 42.744307 \n",
+       "    <path clip-path=\"url(#p6dd6b70650)\" d=\"M 43.78125 42.744307 \n",
        "L 47.163068 43.275091 \n",
        "L 50.544886 44.193256 \n",
        "L 53.926705 45.772559 \n",
@@ -1035,7 +1035,7 @@
        "\" style=\"fill:none;stroke:#0000ff;stroke-linecap:square;stroke-opacity:0.65;stroke-width:2;\"/>\n",
        "   </g>\n",
        "   <g id=\"line2d_26\">\n",
-       "    <path clip-path=\"url(#p45db448fe5)\" d=\"M 43.78125 239.099216 \n",
+       "    <path clip-path=\"url(#p6dd6b70650)\" d=\"M 43.78125 239.099216 \n",
        "L 47.163068 238.612871 \n",
        "L 50.544886 237.771864 \n",
        "L 53.926705 236.326128 \n",
@@ -1138,7 +1138,7 @@
        "\" style=\"fill:none;stroke:#ff0000;stroke-linecap:square;stroke-opacity:0.65;stroke-width:2;\"/>\n",
        "   </g>\n",
        "   <g id=\"line2d_27\">\n",
-       "    <path clip-path=\"url(#p45db448fe5)\" d=\"M 43.78125 239.758125 \n",
+       "    <path clip-path=\"url(#p6dd6b70650)\" d=\"M 43.78125 239.758125 \n",
        "L 47.163068 239.713685 \n",
        "L 50.544886 239.636528 \n",
        "L 53.926705 239.502961 \n",
@@ -1588,7 +1588,7 @@
        "  </g>\n",
        " </g>\n",
        " <defs>\n",
-       "  <clipPath id=\"p45db448fe5\">\n",
+       "  <clipPath id=\"p6dd6b70650\">\n",
        "   <rect height=\"217.44\" width=\"334.8\" x=\"43.78125\" y=\"22.318125\"/>\n",
        "  </clipPath>\n",
        " </defs>\n",
@@ -1617,6 +1617,105 @@
     "plt.grid()\n",
     "# plt.savefig('SIR model.pdf')\n",
     "# plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Interactive Simulation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9a5dfc060996445db27e262d6738e105",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatSlider(value=0.143, continuous_update=False, description='$\\\\beta$:', max=1.0, min=0.001, …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c7bb63b483c54e49ae386e77b995a86b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatSlider(value=12.0, continuous_update=False, description='Simulation Time (months):', max=3…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0c770bb5f2f0408b918d5c4a51e9abc0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "def plot_sir(β,days,tend,semilogy=False):\n",
+    "    N = 10 # total population\n",
+    "    I0 = 1 # 10 sick individuals\n",
+    "    R0 = 0 # 0 people recovered\n",
+    "    S0 = N - I0 # we need to conserve the total population\n",
+    "    tend = tend*30 # tend is given in months\n",
+    "    t = np.linspace(0,tend,int(tend))\n",
+    "    γ = 1.0/days\n",
+    "    # Initial conditions vector\n",
+    "    y0 = [S0, I0, R0]\n",
+    "    # Integrate the SIR equations over the time grid, t.\n",
+    "    sol = odeint(rhs_sir, y0, t, args=(N, β, γ))\n",
+    "    [S, I, R] = sol.T\n",
+    "    \n",
+    "    f = plt.plot\n",
+    "    if (semilogy):\n",
+    "        f =plt.semilogy\n",
+    "    f(t/30, S, 'b', alpha=0.65, lw=2, label='Susceptible')\n",
+    "    f(t/30, I, 'r', alpha=0.65, lw=2, label='Infected')\n",
+    "    f(t/30, R, 'g', alpha=0.65, lw=2, label='Recovered')\n",
+    "    plt.xlabel('# months since outbreak')\n",
+    "    plt.ylabel('# Population (1000s)')\n",
+    "#     plt.xlim(0,tend/30)\n",
+    "    plt.ylim(bottom=1e-4)\n",
+    "    plt.legend()\n",
+    "    plt.title('SIR Model for Epidemics')\n",
+    "    plt.grid()\n",
+    "    # plt.savefig('SIR model.pdf')\n",
+    "    # plt.show()\n",
+    "import ipywidgets as widgets\n",
+    "from ipywidgets import interact, interact_manual\n",
+    "style = {'description_width': 'initial'}\n",
+    "β = widgets.FloatSlider(value=0.143,min=0.001,max=1,step=0.001,description='$\\\\beta$:',continuous_update=False)\n",
+    "days = widgets.FloatSlider(value=14,min=1,max=24,step=0.1, description='Recovery (days):' ,style=style,continuous_update=False)\n",
+    "tend = widgets.FloatSlider(value=12,min=1,max=32,step=0.5, description='Simulation Time (months):',style=style,continuous_update=False)\n",
+    "semilogy = widgets.Checkbox(value=False,description='semilogy plot', style=style)\n",
+    "ui1 = widgets.HBox([β,days])\n",
+    "ui2 = widgets.HBox([tend,semilogy])\n",
+    "out = widgets.interactive_output(plot_sir, {'β': β, 'days': days, 'tend': tend, 'semilogy':semilogy})\n",
+    "\n",
+    "display(ui1,ui2, out)"
    ]
   },
   {
