--- a/topics/numerical-integration/numerical integration.ipynb
+++ b/topics/numerical-integration/numerical integration.ipynb
@@ -6765,8 +6765,9 @@
  ],
  "metadata": {
   "anaconda-cloud": {},
+  "hide_input": false,
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -6780,7 +6781,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
