--- a/topics/regression/Normal Equations Example - GPA.ipynb
+++ b/topics/regression/Normal Equations Example - GPA.ipynb
@@ -4911,8 +4911,9 @@
  ],
  "metadata": {
   "anaconda-cloud": {},
+  "hide_input": false,
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -4926,7 +4927,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.8.3"
   },
   "toc": {
    "base_numbering": 1,
