--- a/topics/regression/kinetics example.ipynb
+++ b/topics/regression/kinetics example.ipynb
@@ -4878,8 +4878,9 @@
  ],
  "metadata": {
   "anaconda-cloud": {},
+  "hide_input": false,
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -4893,7 +4894,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.8.3"
   },
   "toc": {
    "colors": {
